--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,15 @@
 body{
   background-color: #21A48E;
+  margin: 20px;
+}
+
+h3 {
+  text-align: center;
+  padding: 10px;
+}
+
+form {
+  padding: 20px;
 }
 
 #ruby {
