--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,14 @@
+.jumbotron {
+  background-color: #2F4858;
+  color: #4FBA88;
+  text-align: center;
+  font-size-adjust: 0.9;
+}
+
+#jumbo {
+  font-size: xx-large;
+  font-family: Arial, Helvetica, sans-serif;
+}
 body{
   background-color: #21A48E;
   margin: 20px;
@@ -8,8 +19,13 @@ h3 {
   padding: 10px;
 }
 
-form {
-  padding: 20px;
+input {
+  padding: 30px;
+}
+
+button {
+  margin: 20px;
+  float: right;
 }
 
 #ruby {
